[project]
name = "florence_dw"
description = "Based on the original repository [a/https://github.com/spacepxl/ComfyUI-Florence-2](https://github.com/spacepxl/ComfyUI-Florence-2), the model loading and storage methods have been improved, and sd3 has been newly added with enhanced speed and accuracy."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/yiwangsimple/florence_dw"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "florence_dw"
Icon = ""
